Fix for image CSS with too much margin on the left

--- a/src/app/components/main-page/story/story-paragraph/paragraph.component.scss
+++ b/src/app/components/main-page/story/story-paragraph/paragraph.component.scss
@@ -7,9 +7,7 @@ p {
 .illustration-container {
   margin: 1rem;
   display: flex;
-  width: 100%;
   justify-content: center;
-  margin-bottom: 1rem;
 }
 
 sup{
